Creacion de Token en JWT

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5086",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "JwtToke":"http://localhost:5086"
       }
     },
     "https": {
