--- a/BaobabBackEndService.csproj
+++ b/BaobabBackEndService.csproj
@@ -20,6 +20,8 @@
     <PackageReference Include="Microsoft.EntityFrameWorkCore" Version="8.0.4" />
     <PackageReference Include="Pomelo.EntityFrameWorkCore.MySql" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Text.Json" Version="8.0.3" />
     
   </ItemGroup>
 
