implementacion de jwt

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "BaobabDataBaseConnection": "Server=bwjrj7sfbrh2s72jhbje-mysql.services.clever-cloud.com;Database=bwjrj7sfbrh2s72jhbje;Uid=ur9mammpsdhwinl7;Pwd=5r5mWZmfXBef4dNjvWmP;",
     "BaobabDataBaseConnectionTest": "Server=bifscqnwyzzqi9oi2myo-mysql.services.clever-cloud.com;Database=bifscqnwyzzqi9oi2myo;Uid=urgzfvrbtwogjvi3;Pwd=Bng2ssDjY9R87w5lYOOu;"
+  },
+  "Jwt": {
+    "Key": "LaClaveSuperSeguraInDesifrableEsmastienenumeros123456789",
+    "Issuer": "BaobabBackEndService",
+    "Audience": "BaobabAndLuegoPagoCollaboration",
+    "ExpiryMinutes": 60
   }
 }
