--- a/BaobabBackEndService.csproj
+++ b/BaobabBackEndService.csproj
@@ -16,10 +16,12 @@
       correctamente para poder utilizarla, el siguiente paso estara Validator/Validator.cs
   -->
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameWorkCore" Version="8.0.4" />
     <PackageReference Include="Pomelo.EntityFrameWorkCore.MySql" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
     
   </ItemGroup>
 
