precommit for token

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,6 @@
   "Jwt": {
     "Key": "LaClaveSuperSeguraInDesifrableEsmastienenumeros123456789",
     "Issuer": "BaobabBackEndService",
-    "Audience": "BaobabAndLuegoPagoCollaboration",
-    "ExpiryMinutes": 60
+    "Audience": "BaobabAndLuegoPagoCollaboration"
   }
 }
